# Pulsed-Data-Reuploading-Quantum-Models

./: .gitignore  README.md  config.py  layerdependency.py  layers.out  main.py  noise.out  noise.py  pyproject.toml  requirements.txt
data/backends/: BrisbaneConfig.json  FakeManilaConfig.json  brisbane_noise_data.csv  custom_mapper.json  ibm_brisbaneConfig.json  ibm_kyivConfig.json  ibm_sherbrookeConfig.json  kyiv_noise_data.csv  marrakesh_noise_data.csv
data/results/LAYERS_EXPERIMENT/default/digits_17/: results_0.csv
data/results/LAYERS_EXPERIMENT/default/digits_17/partial/: n_qubits_2__n_layers_10__seed_0.csv  n_qubits_2__n_layers_15__seed_0.csv  n_qubits_2__n_layers_1__seed_0.csv  n_qubits_2__n_layers_20__seed_0.csv  n_qubits_2__n_layers_25__seed_0.csv  n_qubits_2__n_layers_30__seed_0.csv  n_qubits_2__n_layers_35__seed_0.csv  n_qubits_2__n_layers_40__seed_0.csv  n_qubits_2__n_layers_45__seed_0.csv  n_qubits_2__n_layers_5__seed_0.csv
data/results/LAYERS_EXPERIMENT/default/digits_56/: results_0.csv
data/results/LAYERS_EXPERIMENT/default/digits_56/partial/: n_qubits_2__n_layers_10__seed_0.csv  n_qubits_2__n_layers_15__seed_0.csv  n_qubits_2__n_layers_1__seed_0.csv  n_qubits_2__n_layers_20__seed_0.csv  n_qubits_2__n_layers_25__seed_0.csv  n_qubits_2__n_layers_5__seed_0.csv
data/results/LAYERS_EXPERIMENT/default/iris/: results_0.csv
data/results/LAYERS_EXPERIMENT/default/iris/partial/: n_qubits_2__n_layers_10__seed_0.csv  n_qubits_2__n_layers_10__seed_1.csv  n_qubits_2__n_layers_15__seed_0.csv  n_qubits_2__n_layers_1__seed_0.csv  n_qubits_2__n_layers_1__seed_1.csv  n_qubits_2__n_layers_20__seed_0.csv  n_qubits_2__n_layers_25__seed_0.csv  n_qubits_2__n_layers_5__seed_0.csv  n_qubits_2__n_layers_5__seed_1.csv
data/results/LAYERS_EXPERIMENT/default/iris/trained_qnn/gate/exp_0/: qnn_q_2_l_10_s_0.pkl  qnn_q_2_l_15_s_0.pkl  qnn_q_2_l_1_s_0.pkl  qnn_q_2_l_5_s_0.pkl
data/results/LAYERS_EXPERIMENT/default/iris/trained_qnn/mixed/exp_0/: qnn_q_2_l_10_s_0.pkl  qnn_q_2_l_15_s_0.pkl  qnn_q_2_l_1_s_0.pkl  qnn_q_2_l_5_s_0.pkl
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.0/digits_08/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.0/iris/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.03/digits_08/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.03/iris/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.06/digits_08/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.06/iris/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.09/digits_08/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.09/iris/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.12/digits_08/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.12/iris/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.15/digits_08/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.15/iris/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.18/digits_08/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.18/iris/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.21/digits_08/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.21/iris/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.24/digits_08/: results_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.24/iris/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.27/digits_08/partial/: n_qubits_2__n_layers_20__seed_0.csv
data/results/NOISE_EXPERIMENT/depolarizing_1q_0.27/iris/partial/: n_qubits_2__n_layers_20__seed_0.csv
examples/: pulse_shapes.py  train_pulsedqnn.py
src/: utils.py
src/QNN/: BaseQNN.py  GateQNN.py  PulsedQNN.py  __init__.py  constants.py
src/Sampler/: MNISTSampler.py  RandomSampler.py  Sampler.py  Sampler3D.py  __init__.py  utils.py
src/experiments/: config_exp.py  final_experiment.py
src/pennypulse/: __init__.py  constants.py  hamiltonian.py  observables.py  pulses.py  trotterization.py
src/pennypulse/shapes/: shapes.py
src/pennypulse/utils/: __init__.py  compute_parameters_pulses.py  integration.py  reorder_AmpPhaseFreq.py
test/: test_utils.py
test/QNN/: TestGateQNN.py  TestNoiseUtils.py  TestPulsedQNN.py
test/QNN/data/: test_save_and_load.pkl  test_save_and_load_pulsed.pkl
test/Sampler/: TestRandomSampler.py  TestSampler2D.py  TestSampler3D.py  testSamplerMNIST.py  test_reproducity.py  test_sampler_iris.py
test/pennypulse/: test_compute_amplitude_rotation.py  test_gaussian_pulse.py  test_general_trotter_aprox.py  test_hamiltonian_and_hbar.py  test_pulse1q.py  test_subpackage.py  test_trotterization.py  test_utils.py  test_z_rotation.py  utils.py
