[project]
name = "pulsed-data-reuploading-quantum-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "appdirs==1.4.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arraylias==0.1.1",
    "arrow==1.3.0",
    "asteval==1.0.5",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "async-lru==2.0.4",
    "attrs==23.2.0",
    "autograd==1.6.2",
    "autoray==0.7.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "cachetools==5.3.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "chex==0.1.87",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "colour==0.1.5",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cryptography==42.0.8",
    "cycler==0.12.1",
    "dask==2024.5.2",
    "debugpy==1.8.8",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.14",
    "diastatic-malt==2.15.2",
    "diffrax==0.6.1",
    "dill==0.3.8",
    "distributed==2024.5.2",
    "docopt-ng==0.9.0",
    "equinox==0.11.10",
    "etils==1.10.0",
    "exceptiongroup==1.2.1",
    "executing==2.0.1",
    "fastjsonschema==2.20.0",
    "fonttools==4.54.1",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2024.10.0",
    "future==1.0.0",
    "gast==0.6.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.6",
    "httpx==0.27.0",
    "icecream==2.1.3",
    "idna==3.10",
    "importlib-metadata==7.1.0",
    "iniconfig==2.0.0",
    "ipython-genutils==0.2.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jax==0.4.35",
    "jaxlib==0.4.35",
    "jaxtyping==0.2.36",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "joblib==1.3.2",
    "json5==0.9.25",
    "jsonpickle==4.0.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "kaggle==1.6.17",
    "kagglehub==0.3.6",
    "kiwisolver==1.4.5",
    "lineax==0.0.7",
    "lmfit==1.3.2",
    "locket==1.0.0",
    "mako==1.3.6",
    "markupsafe==2.1.5",
    "mistune==3.0.2",
    "mpmath==1.3.0",
    "msgpack==1.0.8",
    "multidict==6.1.0",
    "multiset==3.2.0",
    "munch==4.0.0",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "ntlm-auth==1.5.0",
    "numpy==1.26.4",
    "opt-einsum==3.4.0",
    "optax==0.2.3",
    "optimistix==0.0.9",
    "optuna==4.1.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "partd==1.4.2",
    "pbr==6.0.0",
    "pennylane",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "pluggy==1.5.0",
    "ply==3.11",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.47",
    "propcache==0.2.0",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "py-cpuinfo==9.0.0",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydot==2.0.0",
    "pygments==2.18.0",
    "pyjwt==2.8.0",
    "pylatexenc==2.10",
    "pyparsing==3.1.2",
    "pyperclip==1.9.0",
    "pyspnego==0.11.0",
    "pytest==8.2.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==2.0.7",
    "python-slugify==8.0.4",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyzmq==26.2.0",
    "qtconsole==5.6.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "requests-ntlm==1.3.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.21.0",
    "rustworkx==0.15.1",
    "sacred==0.8.7",
    "scikit-learn>=1.8.0",
    "scipy==1.14.1",
    "scipy-openblas32==0.3.29.0.0",
    "seaborn==0.13.2",
    "semantic-version==2.10.0",
    "send2trash==1.8.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.5",
    "sqlalchemy==2.0.36",
    "sspilib==0.1.0",
    "stack-data==0.6.3",
    "stevedore==5.2.0",
    "sympy==1.13.3",
    "tblib==3.0.0",
    "tenacity==9.0.0",
    "termcolor==2.5.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.4.0",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomlkit==0.13.2",
    "toolz==0.12.1",
    "tornado==6.4.1",
    "tqdm==4.66.4",
    "traitlets==5.14.3",
    "typeguard==2.13.3",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uncertainties==3.2.2",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "webcolors==24.8.0",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==12.0",
    "widgetsnbextension==4.0.13",
    "wrapt==1.16.0",
    "yarl==1.17.1",
    "zict==3.0.0",
    "zipp==3.19.2",
]

[tool.uv.sources]
pennylane = { git = "https://github.com/PennyLaneAI/pennylane.git", rev = "e0874da1dd4862fd9b7e06e78d5d4f3c84c865e9" }
